fix(cn-browse): fix incorrect count for same call-number in one instance (#771)
Closes: MSEARCH-992

(cherry picked from commit fe9bee9a7a695b294156bd903e8a05657045962d)